infrastructure/kyverno/policies/add-imagepullsecrets.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-imagepullsecrets
spec:
  rules:
  - name: add-docker-imagepullsecret
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - <(image): "docker.io/*"
          imagePullSecrets:
          - name: registry-docker-hub
  - name: add-ghcr-imagepullsecret
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - <(image): "ghcr.io/*"
          imagePullSecrets:
          - name: registry-ghcr
  - name: add-quay-imagepullsecret
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - <(image): "quay.io/*"
          imagePullSecrets:
          - name: registry-quay
