infrastructure/kyverno/policies/deny-seccomp.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-seccomp
spec:
  rules:
  - name: check-seccomp
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      failureAction: Audit
      message: >-
        Use of custom Seccomp profiles is disallowed. The fields
        spec.securityContext.seccompProfile.type,
        spec.containers[*].securityContext.seccompProfile.type,
        spec.initContainers[*].securityContext.seccompProfile.type, and
        spec.ephemeralContainers[*].securityContext.seccompProfile.type
        must be unset or set to `RuntimeDefault` or `Localhost`.
      pattern:
        spec:
          =(securityContext):
            =(seccompProfile):
              =(type): "RuntimeDefault | Localhost"
          =(ephemeralContainers):
          - =(securityContext):
              =(seccompProfile):
                =(type): "RuntimeDefault | Localhost"
          =(initContainers):
          - =(securityContext):
              =(seccompProfile):
                =(type): "RuntimeDefault | Localhost"
          containers:
          - =(securityContext):
              =(seccompProfile):
                =(type): "RuntimeDefault | Localhost"
