infrastructure/kyverno/policies/enforce-apparmor.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: apparmor
spec:
  background: false
  rules:
    - name: app-armor
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        failureAction: Audit
        message: >-
          Specifying other AppArmor profiles is disallowed. The annotation
          `container.apparmor.security.beta.kubernetes.io` if defined
          must not be set to anything other than `runtime/default` or `localhost/*`.
        pattern:
          =(metadata):
            =(annotations):
              =(container.apparmor.security.beta.kubernetes.io/*): "runtime/default | localhost/*"
