infrastructure/kyverno/policies/enforce-nodeports.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: nodeports
spec:
  background: false
  rules:
  - name: validate-nodeport
    match:
      any:
      - resources:
          kinds:
          - Service
    validate:
      failureAction: Audit
      message: "Services of type NodePort are not allowed."
      pattern:
        spec:
          =(type): "!NodePort"
