infrastructure/kyverno/policies/enforce-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: readonly-rootfs
spec:
  rules:
  - name: check-readOnlyRootFilesystem
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      failureAction: Audit
      message: "Root filesystem must be read-only."
      pattern:
        spec:
          =(ephemeralContainers):
          - securityContext:
              readOnlyRootFilesystem: true
          =(initContainers):
          - securityContext:
              readOnlyRootFilesystem: true
          containers:
          - securityContext:
              readOnlyRootFilesystem: true
