infrastructure/kyverno/policies/modify-imagepullsecrets.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: imagepullsecrets
spec:
  rules:
  - name: add-docker-imagepullsecret-containers
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - <(image): "docker.io/*"
          imagePullSecrets:
          - name: registry-docker-hub
  - name: add-docker-imagepullsecret-initContainers
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          initContainers:
          - <(image): "docker.io/*"
          imagePullSecrets:
          - name: registry-docker-hub
  - name: add-ghcr-imagepullsecret-containers
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - <(image): "ghcr.io/*"
          imagePullSecrets:
          - name: registry-ghcr
  - name: add-ghcr-imagepullsecret-initContainers
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          initContainers:
          - <(image): "ghcr.io/*"
          imagePullSecrets:
          - name: registry-ghcr
  - name: add-zot-imagepullsecret-containers
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - <(image): "jacob.pub/*"
          imagePullSecrets:
          - name: registry-zot
  - name: add-zot-imagepullsecret-initContainers
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          initContainers:
          - <(image): "jacob.pub/*"
          imagePullSecrets:
          - name: registry-zot
  - name: add-quay-imagepullsecret-containers
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - <(image): "quay.io/*"
          imagePullSecrets:
          - name: registry-quay
  - name: add-quay-imagepullsecret-initContainers
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          initContainers:
          - <(image): "quay.io/*"
          imagePullSecrets:
          - name: registry-quay
